fix footer on mobile

--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -67,3 +67,9 @@ main {
 .footer {
 	padding: 1.5rem 1.5rem;
 }
+
+@include from($tablet) {
+	.footer-left {
+		margin-left: auto;
+	}
+}
